--- a/examples/webgl_loader_gltf_transmission_test_2.html
+++ b/examples/webgl_loader_gltf_transmission_test_2.html
@@ -96,7 +96,7 @@
 							{
 								const name='plane'
 								const geometry = new THREE.PlaneGeometry( 10, 10 );
-								const map = new THREE.TextureLoader().load( '/lib/three.js_github/examples/textures/uv_grid_opengl.jpg' );
+								const map = new THREE.TextureLoader().load( './textures/uv_grid_opengl.jpg' );
 								map.repeat.set( 5, 5 );
 								map.wrapS = THREE.RepeatWrapping;
 								map.wrapT = THREE.RepeatWrapping;
